# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: fomineandrei.yml  my-tests.yml
gendiff/: __init__.py  cli.py  diff_gen.py  diff_types.py  exceptions.py  files_formates.py  functions.py  interface.py  make_diff.py  node_diff.py
gendiff/files_formates/: json.py  yaml.py
gendiff/output_formates/: __init__.py  functions.py  json_formate.py  plain.py  plane.py  recursive_decorator.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file4.json  file4.yaml  read_and_write.py
